# languagetool-code-comments

./: .gitignore  .gitmodules  .goreleaser.yml  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  cliff.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: cache.rs  commands.rs  commands_test.rs  lt.rs  main.rs  parse.rs  parse_test.rs
tests/fixtures/: Dockerfile  Makefile  astro.astro  bash.sh  cpp.cc  css.css  elixir.ex  fail.txt  golang.go  hcl.tf  html.html  javascript-react.jsx  javascript.js  lua.lua  nix.nix  python.py  rust.rs  sql.sql  toml.toml  typescript-react.tsx  typescript.ts  yaml.yml
tests/fixtures/commands/: code.py  lt_with_matches.json
tools/: apt.sh  choco.sh  goreleaser-dist.sh  goreleaser.go  null-ls-config.lua  nur.sh  update-readme.rs  yum.sh
